feat: 完善点阵图模式

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -2029,9 +2029,23 @@
     },
     "image-to-dot-matrix": {
       "name": "इमेज से डॉट मैट्रिक्स",
-      "description": "कई शैलियों के साथ डॉट मैट्रिक्स प्रभाव के लिए इमेज कनवर्ट करें",
+      "description": "कई शैलियों के साथ डॉट मैट्रिक्स प्रभाव के लिए इमेज या टेक्स्ट कनवर्ट करें",
+      "mode_title": "इनपुट मोड",
+      "mode_desc": "इमेज या टेक्स्ट से डॉट मैट्रिक्स जेनरेट करने के लिए चुनें",
+      "mode_image": "इमेज मोड",
+      "mode_text": "टेक्स्ट मोड",
       "upload_title": "इमेज अपलोड करें",
       "upload_desc": "इमेज फ़ाइल चुनें या खींचें और छोड़ें",
+      "text_input_title": "टेक्स्ट इनपुट",
+      "text_input_desc": "कनवर्ट करने के लिए टेक्स्ट सामग्री दर्ज करें",
+      "text_content_label": "टेक्स्ट सामग्री",
+      "text_placeholder": "टेक्स्ट, अक्षर या संख्या दर्ज करें...",
+      "font_size_label": "फ़ॉन्ट आकार",
+      "font_weight_label": "फ़ॉन्ट वजन",
+      "font_family_label": "फ़ॉन्ट परिवार",
+      "font_normal": "सामान्य",
+      "font_bold": "बोल्ड",
+      "no_text_input": "कृपया टेक्स्ट सामग्री दर्ज करें",
       "settings_title": "डॉट मैट्रिक्स सेटिंग्स",
       "settings_desc": "डॉट मैट्रिक्स प्रभाव पैरामीटर कस्टमाइज़ करें",
       "preview_title": "डॉट मैट्रिक्स पूर्वावलोकन",
