--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -2029,9 +2029,23 @@
     },
     "image-to-dot-matrix": {
       "name": "图片转点阵图",
-      "description": "将图片转换为点阵图效果，支持多种风格",
+      "description": "将图片或文字转换为点阵图效果，支持多种风格",
+      "mode_title": "输入模式",
+      "mode_desc": "选择使用图片或文字生成点阵图",
+      "mode_image": "图片模式",
+      "mode_text": "文字模式",
       "upload_title": "上传图片",
       "upload_desc": "选择或拖拽图片文件",
+      "text_input_title": "文字输入",
+      "text_input_desc": "输入要转换的文字内容",
+      "text_content_label": "文字内容",
+      "text_placeholder": "输入文字、字母或数字...",
+      "font_size_label": "字体大小",
+      "font_weight_label": "字体粗细",
+      "font_family_label": "字体",
+      "font_normal": "正常",
+      "font_bold": "粗体",
+      "no_text_input": "请输入文字内容",
       "settings_title": "点阵设置",
       "settings_desc": "自定义点阵效果参数",
       "preview_title": "点阵预览",
