--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2029,9 +2029,23 @@
     },
     "image-to-dot-matrix": {
       "name": "Image to Dot Matrix",
-      "description": "Convert images to dot matrix effect with multiple styles",
+      "description": "Convert images or text to dot matrix effect with multiple styles",
+      "mode_title": "Input Mode",
+      "mode_desc": "Choose to generate dot matrix from image or text",
+      "mode_image": "Image Mode",
+      "mode_text": "Text Mode",
       "upload_title": "Upload Image",
       "upload_desc": "Select or drag and drop image file",
+      "text_input_title": "Text Input",
+      "text_input_desc": "Enter text content to convert",
+      "text_content_label": "Text Content",
+      "text_placeholder": "Enter text, letters or numbers...",
+      "font_size_label": "Font Size",
+      "font_weight_label": "Font Weight",
+      "font_family_label": "Font Family",
+      "font_normal": "Normal",
+      "font_bold": "Bold",
+      "no_text_input": "Please enter text content",
       "settings_title": "Dot Matrix Settings",
       "settings_desc": "Customize dot matrix effect parameters",
       "preview_title": "Dot Matrix Preview",
