feat: AES加解密完善、icon图标设计器增加多色板块

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -815,6 +815,8 @@
       "generate_iv": "IV जेनरेट करें",
       "mode_label": "एन्क्रिप्शन मोड",
       "select_mode": "एन्क्रिप्शन मोड चुनें",
+      "padding_label": "पैडिंग मोड",
+      "select_padding": "पैडिंग मोड चुनें",
       "encrypt": "एन्क्रिप्ट",
       "decrypt": "डिक्रिप्ट",
       "output_title": "आउटपुट परिणाम",
@@ -1369,6 +1371,7 @@
       "settings_desc": "अपने लेटर आइकन डिज़ाइन को कस्टमाइज़ करें",
       "text_label": "आइकन टेक्स्ट",
       "text_hint": "आइकन के लिए 1-3 अक्षर दर्ज करें",
+      "text_hint_new": "आइकन के लिए टेक्स्ट दर्ज करें (सर्वोत्तम परिणाम के लिए 1-5 अक्षर अनुशंसित)",
       "shape_label": "आइकन आकार",
       "shapes": {
         "square": "वर्ग",
@@ -1384,6 +1387,15 @@
         "bold": "बोल्ड"
       },
       "background_color": "बैकग्राउंड कलर",
+      "background_mode": "बैकग्राउंड मोड",
+      "mode_solid": "सॉलिड कलर",
+      "mode_multicolor": "बहुरंगी ज्यामितीय",
+      "multicolor_template": "ज्यामितीय टेम्पलेट",
+      "select_template": "टेम्पलेट चुनें",
+      "template_categories": "टेम्पलेट श्रेणियां",
+      "all_templates": "सभी",
+      "region_colors": "क्षेत्र रंग",
+      "show_text": "टेक्स्ट दिखाएं",
       "text_color": "टेक्स्ट कलर",
       "preset_colors": "प्रीसेट कलर",
       "random": "रैंडम",
