--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -817,6 +817,8 @@
       "generate_iv": "生成IV",
       "mode_label": "加密模式",
       "select_mode": "选择加密模式",
+      "padding_label": "填充模式",
+      "select_padding": "选择填充模式",
       "encrypt": "加密",
       "decrypt": "解密",
       "output_title": "输出结果",
@@ -1371,6 +1373,7 @@
       "settings_desc": "自定义您的字母图标设计",
       "text_label": "图标文字",
       "text_hint": "输入1-3个字符作为图标",
+      "text_hint_new": "输入文字作为图标（建议1-5个字符效果最佳）",
       "shape_label": "图标形状",
       "shapes": {
         "square": "正方形",
@@ -1386,6 +1389,15 @@
         "bold": "加粗"
       },
       "background_color": "背景颜色",
+      "background_mode": "背景模式",
+      "mode_solid": "纯色",
+      "mode_multicolor": "多色几何",
+      "multicolor_template": "几何模板",
+      "select_template": "选择模板",
+      "template_categories": "模板分类",
+      "all_templates": "全部",
+      "region_colors": "区域颜色",
+      "show_text": "显示文字",
       "text_color": "文字颜色",
       "preset_colors": "预设颜色",
       "random": "随机",
