--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -815,6 +815,8 @@
       "generate_iv": "Generate IV",
       "mode_label": "Encryption Mode",
       "select_mode": "Select encryption mode",
+      "padding_label": "Padding Mode",
+      "select_padding": "Select padding mode",
       "encrypt": "Encrypt",
       "decrypt": "Decrypt",
       "output_title": "Output Result",
@@ -1369,6 +1371,7 @@
       "settings_desc": "Customize your letter icon design",
       "text_label": "Icon Text",
       "text_hint": "Enter 1-3 characters for the icon",
+      "text_hint_new": "Enter text for the icon (1-5 characters recommended for best results)",
       "shape_label": "Icon Shape",
       "shapes": {
         "square": "Square",
@@ -1384,6 +1387,15 @@
         "bold": "Bold"
       },
       "background_color": "Background Color",
+      "background_mode": "Background Mode",
+      "mode_solid": "Solid Color",
+      "mode_multicolor": "Multicolor Geometric",
+      "multicolor_template": "Geometric Template",
+      "select_template": "Select Template",
+      "template_categories": "Template Categories",
+      "all_templates": "All",
+      "region_colors": "Region Colors",
+      "show_text": "Show Text",
       "text_color": "Text Color",
       "preset_colors": "Preset Colors",
       "random": "Random",
