optimize: 优化图标设计器

--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -1367,10 +1367,24 @@
       }
     },
     "icon-designer": {
-      "name": "字母图标设计器",
-      "description": "设计简单的字母图标，自定义颜色并导出多种尺寸",
+      "name": "图标设计器",
+      "description": "使用文字、图标库或自定义SVG设计图标，自定义颜色并导出多种尺寸",
       "settings_title": "图标设置",
-      "settings_desc": "自定义您的字母图标设计",
+      "settings_desc": "自定义您的图标设计",
+      "content_mode": "内容模式",
+      "mode_text": "文字",
+      "mode_icon_library": "图标库",
+      "mode_custom_svg": "自定义SVG",
+      "select_icon": "选择图标",
+      "browse_icons": "浏览图标库",
+      "icon_library_title": "图标库",
+      "icons_available": "个图标可用",
+      "all_icons": "全部",
+      "icon_size_label": "图标大小",
+      "icon_color": "图标颜色",
+      "custom_svg_label": "自定义SVG代码",
+      "custom_svg_placeholder": "在此粘贴您的SVG代码...\n\n示例（建议使用24×24的viewBox）：\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
+      "custom_svg_hint": "粘贴SVG路径或完整SVG内容。支持任意viewBox尺寸，图标将自动缩放和居中。",
       "text_label": "图标文字",
       "text_hint": "输入1-3个字符作为图标",
       "text_hint_new": "输入文字作为图标（建议1-5个字符效果最佳）",
