--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1365,10 +1365,24 @@
       }
     },
     "icon-designer": {
-      "name": "Letter Icon Designer",
-      "description": "Design simple letter icons with custom colors and export in multiple sizes",
+      "name": "Icon Designer",
+      "description": "Design icons with text, icon library, or custom SVG, with custom colors and export in multiple sizes",
       "settings_title": "Icon Settings",
-      "settings_desc": "Customize your letter icon design",
+      "settings_desc": "Customize your icon design",
+      "content_mode": "Content Mode",
+      "mode_text": "Text",
+      "mode_icon_library": "Icon Library",
+      "mode_custom_svg": "Custom SVG",
+      "select_icon": "Select Icon",
+      "browse_icons": "Browse Icon Library",
+      "icon_library_title": "Icon Library",
+      "icons_available": "icons available",
+      "all_icons": "All",
+      "icon_size_label": "Icon Size",
+      "icon_color": "Icon Color",
+      "custom_svg_label": "Custom SVG Code",
+      "custom_svg_placeholder": "Paste your SVG code here...\n\nExample (24×24 viewBox recommended):\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
+      "custom_svg_hint": "Paste SVG path or complete SVG content. Supports any viewBox size - the icon will be auto-centered.",
       "text_label": "Icon Text",
       "text_hint": "Enter 1-3 characters for the icon",
       "text_hint_new": "Enter text for the icon (1-5 characters recommended for best results)",
