--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1365,10 +1365,24 @@
       }
     },
     "icon-designer": {
-      "name": "लेटर आइकन डिज़ाइनर",
-      "description": "कस्टम कलर के साथ सरल लेटर आइकन डिज़ाइन करें और कई साइज़ में एक्सपोर्ट करें",
+      "name": "आइकन डिज़ाइनर",
+      "description": "टेक्स्ट, आइकन लाइब्रेरी या कस्टम SVG के साथ आइकन डिज़ाइन करें, कस्टम कलर और कई साइज़ में एक्सपोर्ट करें",
       "settings_title": "आइकन सेटिंग्स",
-      "settings_desc": "अपने लेटर आइकन डिज़ाइन को कस्टमाइज़ करें",
+      "settings_desc": "अपने आइकन डिज़ाइन को कस्टमाइज़ करें",
+      "content_mode": "कंटेंट मोड",
+      "mode_text": "टेक्स्ट",
+      "mode_icon_library": "आइकन लाइब्रेरी",
+      "mode_custom_svg": "कस्टम SVG",
+      "select_icon": "आइकन चुनें",
+      "browse_icons": "आइकन लाइब्रेरी ब्राउज़ करें",
+      "icon_library_title": "आइकन लाइब्रेरी",
+      "icons_available": "आइकन उपलब्ध",
+      "all_icons": "सभी",
+      "icon_size_label": "आइकन साइज़",
+      "icon_color": "आइकन कलर",
+      "custom_svg_label": "कस्टम SVG कोड",
+      "custom_svg_placeholder": "अपना SVG कोड यहाँ पेस्ट करें...\n\nउदाहरण (24×24 viewBox अनुशंसित):\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
+      "custom_svg_hint": "SVG पाथ या पूर्ण SVG कंटेंट पेस्ट करें। किसी भी viewBox आकार का समर्थन करता है - आइकन स्वचालित रूप से स्केल और केंद्रित होगा।",
       "text_label": "आइकन टेक्स्ट",
       "text_hint": "आइकन के लिए 1-3 अक्षर दर्ज करें",
       "text_hint_new": "आइकन के लिए टेक्स्ट दर्ज करें (सर्वोत्तम परिणाम के लिए 1-5 अक्षर अनुशंसित)",
