optimize: 自定义svg 优化

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1382,7 +1382,9 @@
       "icon_color": "आइकन कलर",
       "custom_svg_label": "कस्टम SVG कोड",
       "custom_svg_placeholder": "अपना SVG कोड यहाँ पेस्ट करें...\n\nउदाहरण (24×24 viewBox अनुशंसित):\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
-      "custom_svg_hint": "SVG पाथ या पूर्ण SVG कंटेंट पेस्ट करें। किसी भी viewBox आकार का समर्थन करता है - आइकन स्वचालित रूप से स्केल और केंद्रित होगा।",
+      "custom_svg_hint": "SVG पाथ या पूर्ण SVG कंटेंट पेस्ट करें। किसी भी viewBox आकार का समर्थन करता है, स्ट्रोक और भरण आइकनों का स्वचालित रूप से पता लगाता है और उन्हें केंद्रित करता है।",
+      "custom_svg_color": "SVG कलर",
+      "custom_svg_color_hint": "कस्टम SVG का रंग समायोजित करें। बुद्धिमानी से स्ट्रोक आइकन (स्ट्रोक शैलियों को संरक्षित करते हुए) और भरण आइकनों का पता लगाता है, स्वचालित रूप से चयनित रंग लागू करता है।",
       "text_label": "आइकन टेक्स्ट",
       "text_hint": "आइकन के लिए 1-3 अक्षर दर्ज करें",
       "text_hint_new": "आइकन के लिए टेक्स्ट दर्ज करें (सर्वोत्तम परिणाम के लिए 1-5 अक्षर अनुशंसित)",
