--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -1384,7 +1384,9 @@
       "icon_color": "图标颜色",
       "custom_svg_label": "自定义SVG代码",
       "custom_svg_placeholder": "在此粘贴您的SVG代码...\n\n示例（建议使用24×24的viewBox）：\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
-      "custom_svg_hint": "粘贴SVG路径或完整SVG内容。支持任意viewBox尺寸，图标将自动缩放和居中。",
+      "custom_svg_hint": "粘贴SVG路径或完整SVG内容。支持任意viewBox尺寸，自动识别线条图标和填充图标，图标将自动缩放和居中。",
+      "custom_svg_color": "SVG颜色",
+      "custom_svg_color_hint": "调节自定义SVG的颜色。智能识别线条图标（保留stroke样式）和填充图标，自动应用所选颜色。",
       "text_label": "图标文字",
       "text_hint": "输入1-3个字符作为图标",
       "text_hint_new": "输入文字作为图标（建议1-5个字符效果最佳）",
