--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1382,7 +1382,9 @@
       "icon_color": "Icon Color",
       "custom_svg_label": "Custom SVG Code",
       "custom_svg_placeholder": "Paste your SVG code here...\n\nExample (24×24 viewBox recommended):\npath d=\"M12 2L2 7l10 5 10-5-10-5z\"\npath d=\"M2 17l10 5 10-5M2 12l10 5 10-5\"",
-      "custom_svg_hint": "Paste SVG path or complete SVG content. Supports any viewBox size - the icon will be auto-centered.",
+      "custom_svg_hint": "Paste SVG path or complete SVG content. Supports any viewBox size, automatically detects stroke and filled icons, and centers them.",
+      "custom_svg_color": "SVG Color",
+      "custom_svg_color_hint": "Adjust the color of custom SVG. Intelligently detects stroke icons (preserving stroke styles) and filled icons, automatically applying the selected color.",
       "text_label": "Icon Text",
       "text_hint": "Enter 1-3 characters for the icon",
       "text_hint_new": "Enter text for the icon (1-5 characters recommended for best results)",
