optimize: svg 增加图标库链接

--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -1387,6 +1387,9 @@
       "custom_svg_hint": "粘贴SVG路径或完整SVG内容。支持任意viewBox尺寸，自动识别线条图标和填充图标，图标将自动缩放和居中。",
       "custom_svg_color": "SVG颜色",
       "custom_svg_color_hint": "调节自定义SVG的颜色。智能识别线条图标（保留stroke样式）和填充图标，自动应用所选颜色。",
+      "svg_resources_title": "SVG 图标资源",
+      "svg_resources_desc": "从这些网站获取 SVG 代码，直接粘贴到上方使用",
+      "visit_website": "访问网站",
       "text_label": "图标文字",
       "text_hint": "输入1-3个字符作为图标",
       "text_hint_new": "输入文字作为图标（建议1-5个字符效果最佳）",
