--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1385,6 +1385,9 @@
       "custom_svg_hint": "Paste SVG path or complete SVG content. Supports any viewBox size, automatically detects stroke and filled icons, and centers them.",
       "custom_svg_color": "SVG Color",
       "custom_svg_color_hint": "Adjust the color of custom SVG. Intelligently detects stroke icons (preserving stroke styles) and filled icons, automatically applying the selected color.",
+      "svg_resources_title": "SVG Icon Resources",
+      "svg_resources_desc": "Get SVG code from these websites and paste above",
+      "visit_website": "Visit",
       "text_label": "Icon Text",
       "text_hint": "Enter 1-3 characters for the icon",
       "text_hint_new": "Enter text for the icon (1-5 characters recommended for best results)",
