--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1385,6 +1385,9 @@
       "custom_svg_hint": "SVG पाथ या पूर्ण SVG कंटेंट पेस्ट करें। किसी भी viewBox आकार का समर्थन करता है, स्ट्रोक और भरण आइकनों का स्वचालित रूप से पता लगाता है और उन्हें केंद्रित करता है।",
       "custom_svg_color": "SVG कलर",
       "custom_svg_color_hint": "कस्टम SVG का रंग समायोजित करें। बुद्धिमानी से स्ट्रोक आइकन (स्ट्रोक शैलियों को संरक्षित करते हुए) और भरण आइकनों का पता लगाता है, स्वचालित रूप से चयनित रंग लागू करता है।",
+      "svg_resources_title": "SVG आइकन संसाधन",
+      "svg_resources_desc": "इन वेबसाइटों से SVG कोड प्राप्त करें और ऊपर पेस्ट करें",
+      "visit_website": "वेबसाइट पर जाएं",
       "text_label": "आइकन टेक्स्ट",
       "text_hint": "आइकन के लिए 1-3 अक्षर दर्ज करें",
       "text_hint_new": "आइकन के लिए टेक्स्ट दर्ज करें (सर्वोत्तम परिणाम के लिए 1-5 अक्षर अनुशंसित)",
