kd: xml to json

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -335,6 +335,56 @@
         "keywords": "JSON से XML,डेटा रूपांतरण,JSON प्रोसेसिंग,XML प्रारूप,डेटा एक्सचेंज,ऑनलाइन टूल"
       }
     },
+    "xml-to-json": {
+      "name": "XML से JSON कनवर्टर",
+      "description": "XML डेटा को तुरंत JSON प्रारूप में परिवर्तित करें",
+      "input_title": "XML इनपुट",
+      "input_desc": "परिवर्तित करने के लिए XML डेटा पेस्ट या दर्ज करें",
+      "output_title": "JSON आउटपुट",
+      "output_desc": "परिवर्तित JSON डेटा",
+      "placeholder": "कृपया परिवर्तित करने के लिए XML डेटा दर्ज करें...",
+      "output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
+      "invalid_xml": "अमान्य XML प्रारूप, कृपया अपना इनपुट जांचें",
+      "convert_success": "रूपांतरण सफल!",
+      "introduction": "XML से JSON कनवर्टर एक पेशेवर डेटा प्रारूप रूपांतरण टूल है जो XML (एक्स्टेंसिबल मार्कअप लैंग्वेज) डेटा को सटीक रूप से JSON प्रारूप में परिवर्तित करता है। XML का व्यापक रूप से कॉन्फ़िगरेशन फ़ाइलों, वेब सेवाओं और डेटा एक्सचेंज परिदृश्यों में उपयोग किया जाता है, जबकि JSON आधुनिक वेब विकास में मुख्यधारा डेटा प्रारूप है। यह टूल बुद्धिमानी से XML संरचना का विश्लेषण करता है, मूल डेटा के पदानुक्रमित संबंधों और प्रकार की जानकारी को संरक्षित करता है, मानकीकृत JSON आउटपुट उत्पन्न करता है, जटिल नेस्टेड संरचनाओं और एट्रिब्यूट हैंडलिंग का समर्थन करता है, जो इसे API एकीकरण, डेटा माइग्रेशन और प्रारूप रूपांतरण में डेवलपर्स के लिए एक आदर्श टूल बनाता है।",
+      "features": [
+        "⚡ परिणामों के रीयल-टाइम पूर्वावलोकन के साथ तीव्र रूपांतरण",
+        "🎯 बुद्धिमान पार्सिंग, XML टैग, एट्रिब्यूट्स और टेक्स्ट सामग्री को सटीक रूप से संभालती है",
+        "🔄 संरचना संरक्षण, डेटा पदानुक्रम को पूर्णतः बनाए रखता है",
+        "📋 परिवर्तित JSON डेटा के त्वरित उपयोग के लिए एक-क्लिक कॉपी",
+        "💾 परिणामों को सहेजने और साझा करने में आसानी के लिए डाउनलोड समर्थन",
+        "🔒 स्थानीय प्रसंस्करण, कोई सर्वर अपलोड के साथ डेटा सुरक्षा",
+        "✨ स्वरूपित आउटपुट, पठनीय JSON प्रारूप उत्पन्न करता है",
+        "📱 मोबाइल और डेस्कटॉप का समर्थन करने वाला उत्तरदायी डिज़ाइन"
+      ],
+      "faq": [
+        {
+          "question": "XML से JSON क्या है? यह रूपांतरण क्यों आवश्यक है?",
+          "answer": "XML से JSON, XML प्रारूप डेटा को JSON प्रारूप में परिवर्तित करने की प्रक्रिया है। कई विरासत सिस्टम XML प्रारूप का उपयोग करते हैं, जबकि आधुनिक वेब API और JavaScript एप्लिकेशन JSON को प्राथमिकता देते हैं। यह टूल डेवलपर्स को विभिन्न सिस्टम के बीच डेटा प्रारूप परिवर्तित करने में मदद करता है, विकास दक्षता और डेटा संगतता में सुधार करता है।"
+        },
+        {
+          "question": "रूपांतरण के दौरान XML एट्रिब्यूट्स को कैसे संभाला जाता है?",
+          "answer": "XML एलिमेंट एट्रिब्यूट्स को JSON ऑब्जेक्ट में विशेष फ़ील्ड में परिवर्तित किया जाता है। आमतौर पर, एट्रिब्यूट मानों को संग्रहीत करने के लिए '@' उपसर्ग या '_attributes' ऑब्जेक्ट का उपयोग किया जाता है, यह सुनिश्चित करते हुए कि एट्रिब्यूट जानकारी खो नहीं जाती जबकि इसे एलिमेंट सामग्री से अलग किया जाता है।"
+        },
+        {
+          "question": "दोहराए गए XML एलिमेंट्स को कैसे संभाला जाता है?",
+          "answer": "जब XML में एक ही नाम के कई एलिमेंट्स मौजूद होते हैं, तो टूल बुद्धिमानी से उन्हें JSON एरे में परिवर्तित करता है। उदाहरण के लिए, कई <item> एलिमेंट्स को items एरे में परिवर्तित किया जाता है, पूर्ण डेटा अखंडता बनाए रखते हुए।"
+        },
+        {
+          "question": "क्या परिवर्तित JSON प्रारूप मानक है?",
+          "answer": "हाँ, टूल द्वारा उत्पन्न JSON पूर्णतः JSON मानक विनिर्देशों का अनुपालन करता है, सही सिंटैक्स संरचना और स्वरूपित इंडेंटेशन के साथ जिसे किसी भी JSON पार्सर द्वारा ठीक से पार्स और प्रोसेस किया जा सकता है।"
+        },
+        {
+          "question": "क्या डेटा रूपांतरण सुरक्षित है? क्या यह सर्वर पर अपलोड होगा?",
+          "answer": "पूर्णतः सुरक्षित! सभी रूपांतरण ऑपरेशन आपके ब्राउज़र में स्थानीय रूप से किए जाते हैं, और डेटा कभी भी किसी सर्वर पर अपलोड नहीं होता है। यह सुनिश्चित करता है कि आपका संवेदनशील डेटा और गोपनीयता अधिकतम सुरक्षा प्राप्त करती है।"
+        }
+      ],
+      "meta": {
+        "title": "XML से JSON कनवर्टर",
+        "description": "ऑनलाइन XML से JSON टूल, XML डेटा को तुरंत JSON प्रारूप में परिवर्तित करें। जटिल नेस्टेड संरचनाओं, एट्रिब्यूट पार्सिंग का समर्थन करता है, स्वरूपित आउटपुट और एक-क्लिक कॉपी/डाउनलोड कार्यक्षमता प्रदान करता है।",
+        "keywords": "xml से json,xml को json में बदलें,xml से json कनवर्टर,xml पार्सर,डेटा रूपांतरण,ऑनलाइन टूल"
+      }
+    },
     "json-visualizer": {
       "name": "JSON विज़ुअलाइज़र",
       "description": "JSON डेटा को ट्री संरचना में प्रदर्शित करें",
