--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -64,7 +64,10 @@
     "high_performance": "⚡ उच्च प्रदर्शन",
     "high_performance_desc": "Next.js और TypeScript पर आधारित, तेज़ और उत्तरदायी उपयोगकर्ता अनुभव प्रदान करता है",
     "privacy_protection": "🔒 गोपनीयता सुरक्षा",
-    "privacy_protection_desc": "सभी उपकरण क्लाइंट-साइड पर चलते हैं, आपकी डेटा गोपनीयता और सुरक्षा सुनिश्चित करते हैं"
+    "privacy_protection_desc": "सभी उपकरण क्लाइंट-साइड पर चलते हैं, आपकी डेटा गोपनीयता और सुरक्षा सुनिश्चित करते हैं",
+    "categories_subtitle": "सभी उपलब्ध टूल श्रेणियों और सुविधाओं को ब्राउज़ करें",
+    "popular_tools_subtitle": "डेवलपर्स द्वारा अनुशंसित सबसे लोकप्रिय और उपयोगी टूल",
+    "features_subtitle": "आधुनिक डिज़ाइन, बहुभाषी समर्थन, गोपनीयता-केंद्रित डेवलपर टूल प्लेटफ़ॉर्म"
   },
   "categories": {
     "json_tools": "JSON उपयोगिता",
