feat: 增加德语语种

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -67,7 +67,8 @@
     "privacy_protection_desc": "सभी उपकरण क्लाइंट-साइड पर चलते हैं, आपकी डेटा गोपनीयता और सुरक्षा सुनिश्चित करते हैं",
     "categories_subtitle": "सभी उपलब्ध टूल श्रेणियों और सुविधाओं को ब्राउज़ करें",
     "popular_tools_subtitle": "डेवलपर्स द्वारा अनुशंसित सबसे लोकप्रिय और उपयोगी टूल",
-    "features_subtitle": "आधुनिक डिज़ाइन, बहुभाषी समर्थन, गोपनीयता-केंद्रित डेवलपर टूल प्लेटफ़ॉर्म"
+    "features_subtitle": "आधुनिक डिज़ाइन, बहुभाषी समर्थन, गोपनीयता-केंद्रित डेवलपर टूल प्लेटफ़ॉर्म",
+    "new_language_announcement": "🎉 हमें घोषणा करते हुए खुशी हो रही है कि अब जर्मन (Deutsch) समर्थित है! आपके समर्थन के लिए धन्यवाद!"
   },
   "categories": {
     "json_tools": "JSON उपयोगिता",
