--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -661,6 +661,12 @@
       "output_desc": "एन्कोड/डीकोड किया गया टेक्स्ट",
       "output_placeholder": "एन्कोडिंग/डीकोडिंग परिणाम यहाँ दिखाई देगा...",
       "invalid_base64": "अमान्य Base64 फॉर्मेट",
+      "batch_mode": "बैच मोड",
+      "batch_mode_desc": "पंक्ति दर पंक्ति प्रसंस्करण, प्रत्येक पंक्ति को स्वतंत्र रूप से एन्कोड/डीकोड करें",
+      "batch_placeholder": "बैच एन्कोडिंग/डीकोडिंग के लिए टेक्स्ट दर्ज करें, प्रति पंक्ति एक आइटम...",
+      "upload_file": "TXT फ़ाइल अपलोड करें",
+      "file_type_error": "केवल .txt फ़ाइलें समर्थित हैं",
+      "file_read_error": "फ़ाइल पढ़ना विफल, कृपया पुनः प्रयास करें",
       "encoded": "सफलतापूर्वक एन्कोड किया गया",
       "decoded": "सफलतापूर्वक डीकोड किया गया",
       "meta": {
